# weather_bot

./: .env.example  .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
bot_service/: __main__.py  config.py
bot_service/db/: db_interface.py
bot_service/handlers/: __init__.py  button_handlers.py  commands_handlers.py  file_handlers.py  text_handlers.py
bot_service/utils/: city_processor.py
bot_service/weather_api/: weather_connection.py  weather_utils.py
tests/: __init__.py  conftest.py  test_api.py  test_crud.py  test_validations.py
